# jpeg_resize_ffi

./: Cargo.toml  README.md  build.rs  resize.bat  resize.py  version.rc
.cargo/: config.toml
src/: lib.rs
